--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "kreait/firebase-php": "^7.10",
         "kreait/laravel-firebase": "^5.8",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
