--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:yJa0sKee6E5vBvbtBpSX6KKK9iC+4bqD00qgYdIF5eg=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -62,3 +62,26 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+FIREBASE_API_KEY=AIzaSyBUTHsxJwwS5k1wG8POzvPU-IFAoD5gWGg
+FIREBASE_AUTH_DOMAIN=floodguard-indobot.firebaseapp.com
+FIREBASE_DATABASE_URL=https://floodguard-indobot-default-rtdb.firebaseio.com
+FIREBASE_PROJECT_ID=floodguard-indobot
+FIREBASE_STORAGE_BUCKET=floodguard-indobot.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=949006118133
+FIREBASE_APP_ID=1:949006118133:web:3268ae8033baf150abe9bc
+FIREBASE_MEASUREMENT_ID=G-68Y36P9WCX
+
+
+FIREBASE_PROJECT=floodguard-indobot
+FIREBASE_CREDENTIALS=storage/app/public/credentials/credentials.json
+FIREBASE_DATABASE_URL=https://floodguard-indobot-default-rtdb.firebaseio.com/
+FIREBASE_STORAGE_BUCKET=floodguard-indobot.appspot.com
+
+PUSHER_APP_ID=1806352
+PUSHER_APP_KEY=8f549413fe88359ea4fd
+PUSHER_APP_SECRET=12406092a04623adfbd6
+PUSHER_APP_CLUSTER=ap1
+
+
+
